--- a/composer.json
+++ b/composer.json
@@ -1,1 +1,10 @@
-{}
+{
+    "require": {
+        "ext-bz2": "*",
+        "ext-gd2": "*",
+        "ext-ldap": "*",
+        "ext-mbstring": "*",
+        "ext-openssl": "*",
+        "ext-pdo_sqlite": "*"
+    }
+}
