--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,13 @@
         "ext-ldap": "*",
         "ext-mbstring": "*",
         "ext-openssl": "*",
-        "ext-pdo_sqlite": "*"
+        "ext-pdo_sqlite": "*",
+        "simplepie/simplepie": "1.5.5",
+        "phpseclib/phpseclib": "2.0.27",
+        "paragonie/random_compat": "v2.0.18",
+        "openpsa/universalfeedcreator": "1.8.3.2",
+        "marcusschwarz/lesserphp": "v0.5.4",
+        "geshi/geshi": "v1.0.9.1",
+        "aziraphale/email-address-validator": "2.0.1"
     }
 }
