--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "paragonie/random_compat": "v2.0.18",
         "openpsa/universalfeedcreator": "1.8.3.2",
         "marcusschwarz/lesserphp": "v0.5.4",
-        "geshi/geshi": "v1.0.9.1",
-        "aziraphale/email-address-validator": "2.0.1"
+        "geshi/geshi": "dev-master",
+        "aziraphale/email-address-validator": "2.0.1",
+        "splitbrain/php-cli": "1.1.7"
     }
 }
